# handler/CreateOpening.go
@@ -2,6 +2,8 @@
 
 import (
 	"fmt"
+	"github.com/1guilherme1python1/go-api-vagas/handler/requests"
+	"github.com/1guilherme1python1/go-api-vagas/handler/responses"
 	"github.com/1guilherme1python1/go-api-vagas/schemas"
 	"github.com/gin-gonic/gin"
 	"net/http"
@@ -20,7 +22,7 @@ import (
 // @Failure 500 {object} ErrorResponse
 // @Router /opening [post]
 func CreateOpeningHandler(ctx *gin.Context) {
-	var request = CreateOpeningRequest{}
+	var request = requests.CreateOpeningRequest{}
 
 	err := ctx.BindJSON(&request)
 	if err != nil {
@@ -32,7 +34,13 @@ func CreateOpeningHandler(ctx *gin.Context) {
 	err = request.Validate()
 	if err != nil {
 		logger.Errof("erro ao validate: %v\n", err.Error())
-		sendErrorResponse(ctx, http.StatusBadRequest, err.Error())
+		responses.SendErrorResponse(ctx, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	userEmail, exists := ctx.Get("email")
+	if !exists {
+		responses.SendErrorResponse(ctx, http.StatusUnauthorized, "User email not found")
 		return
 	}
 
@@ -43,14 +51,29 @@ func CreateOpeningHandler(ctx *gin.Context) {
 		Role:     request.Role,
 		Remote:   *request.Remote,
 		Link:     request.Link,
+		Email:    userEmail.(string),
 	}
 
+	// Cria no banco primeiro
 	if err := db.Create(&opening).Error; err != nil {
 		logger.Errof("error creating opening: %v\n", err.Error())
-		sendErrorResponse(ctx, http.StatusInternalServerError, err.Error())
+		responses.SendErrorResponse(ctx, http.StatusInternalServerError, err.Error())
 		return
 	}
 
+	// Só agora o ID e os timestamps foram preenchidos!
+	response := responses.OpeningResponse{
+		ID:        opening.ID,
+		CreatedAt: opening.CreatedAt,
+		UpdatedAt: opening.UpdatedAt,
+		Role:      opening.Role,
+		Company:   opening.Company,
+		Location:  opening.Location,
+		Remote:    opening.Remote,
+		Link:      opening.Link,
+		Salary:    opening.Salary,
+	}
+
 	logger.Infof("request: %+v\n", request)
-	SendSuccessResponse(ctx, http.StatusOK, opening)
+	responses.SendSuccessResponse(ctx, http.StatusOK, response)
 }
