# handler/requests/request.go
@@ -1,15 +1,14 @@
-﻿package handler
+﻿package requests
 
 import (
 	"fmt"
 )
 
-func errParamIdRequired(name, typ string) error {
+func ErrParamIdRequired(name, typ string) error {
 	return fmt.Errorf("%v is required, type: %v", name, typ)
 }
 
-//CreateOpening
-
+// CreateOpening
 type CreateOpeningRequest struct {
 	Role     string `json:"role"`
 	Company  string `json:"company"`
@@ -24,22 +23,22 @@ func (req *CreateOpeningRequest) Validate() error {
 		return fmt.Errorf("malformed body request")
 	}
 	if req.Role == "" {
-		return errParamIdRequired("role", "string")
+		return ErrParamIdRequired("role", "string")
 	}
 	if req.Location == "" {
-		return errParamIdRequired("location", "string")
+		return ErrParamIdRequired("location", "string")
 	}
 	if req.Company == "" {
-		return errParamIdRequired("company", "string")
+		return ErrParamIdRequired("company", "string")
 	}
 	if req.Remote == nil {
-		return errParamIdRequired("remote", "boolean")
+		return ErrParamIdRequired("remote", "boolean")
 	}
 	if req.Link == "" {
-		return errParamIdRequired("link", "string")
+		return ErrParamIdRequired("link", "string")
 	}
 	if req.Salary <= 0 {
-		return errParamIdRequired("salary", "int")
+		return ErrParamIdRequired("salary", "int")
 	}
 
 	return nil
@@ -63,6 +62,25 @@ func (req *UpdateOpeningRequest) Validate() error {
 		req.Salary <= 0 {
 
 		return fmt.Errorf("at least one field must be provided to update")
+	}
+
+	return nil
+}
+
+type LoginRequest struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+func (req *LoginRequest) Validate() error {
+	if req == nil {
+		return fmt.Errorf("malformed body request")
+	}
+	if req.Email == "" {
+		return ErrParamIdRequired("email", "string")
+	}
+	if req.Password == "" {
+		return ErrParamIdRequired("password", "string")
 	}
 
 	return nil
